--- a/demo/src/main/resources/templates/html/checkoutServico.html
+++ b/demo/src/main/resources/templates/html/checkoutServico.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!--<!doctype html>
 <html lang="en">
 
 <head>
@@ -63,7 +63,7 @@
   </style>
 
 
-  <!-- Custom styles for this template -->
+  Custom styles for this template 
   <link href="form-validation.css" rel="stylesheet">
 </head>
 
@@ -139,7 +139,7 @@
                   dias</small> <br>
                 <small class="text-muted">Quantidade de Pets</small> <small style="float: right"
                   class="text-muted">Quantidade de pets</small> <br>
-                <!--Verificar como justar essa linha-->
+                Verificar como justar essa linha
                 <hr>
                 <h6 class="my-0">Total da Hospedagem</h6>
                 <h6 class="my-0">R$</h6>
@@ -327,4 +327,4 @@
   <script src="form-validation.js"></script>
 </body>
 
-</html>
+</html> -->
