--- a/demo/src/main/resources/templates/html/cadastroparceiro.html
+++ b/demo/src/main/resources/templates/html/cadastroparceiro.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <title>Cadastro do Parceiro</title>
-
-  <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <link href="/src/main/resources/static/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -211,8 +211,7 @@
   </main>
   </div>
 
-  <script src="../bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-
+  <script src="/src/main/resources/static/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../js/form-validation.js"></script>
 </body>
 
