Pet - salvar banco de dados

--- a/demo/src/main/resources/templates/html/cadastrodonopet.html
+++ b/demo/src/main/resources/templates/html/cadastrodonopet.html
@@ -103,7 +103,7 @@
     <div class="py-5 text-center">
       <h2>Cadastro do Dono Pet</h2>
 
-    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="submit">
+    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="button">
       Cadastrar
   </button>
 </div>
