--- a/demo/src/main/resources/templates/html/cadastrodopet.html
+++ b/demo/src/main/resources/templates/html/cadastrodopet.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <title>Cadastro do Pet</title>
 
-  <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -157,43 +157,43 @@
                 </div>
 
                 <div class="modal-body">
-                        <form class="needs-validation" novalidate>
+                        <form method="post" th:action="InsertPet" th:object="${Pet}" class="needs-validation" novalidate>
                             <div class="form-group">
                               <h4 class="mb-3">Informações do Pet</h4>
                               <label for="nomePet" class="form-label">Nome do Pet</label>
-                              <input type="text" class="form-control" id="nomePet" placeholder="Digite o nome do pet" required>
+                              <input type="text" class="form-control" id="nomePet" placeholder="Digite o nome do pet" th:field="*{nomePet}" required>
                               <div class="invalid-feedback">
                                 Por favor, informe o nome.
                               </div>
                             </div>
                               <div class="form-group">
                                 <label for="idadePet" class="form-label">Idade do Pet</label>
-                                 <input type="number" class="form-control" id="idadePet" placeholder="Digite a idade do pet" required>
-                                 <div  id="erro-idade"  class="invalid-feedback">
+                                 <input type="number" class="form-control" id="idadePet" placeholder="Digite a idade do pet" th:field="*{idade}"required>
+                                 <div  id="erro-ida   de"  class="invalid-feedback">
                                   Por favor, informe a idade.<i class="fas fa-id-badge    "></i>.
                                 </div>
                                 </div>
-                              <div class="form-group">
+                              <!--<div class="form-group">
                                 <label for="dtNascPet" class="form-label">Data de Nascimento </label>
                                 <input type="date" class="form-control" id="dtNascPet" placeholder="">
-                              </div>
+                              </div>-->
                               <div class="form-group">
                                 <label for="pesoPet" class="form-label">Peso do Pet</label>
-                                <input type="number" class="form-control" id="pesoPet" maxlength="5" onkeypress="$(this).mask('00,00', {reverse: true});" placeholder="Digite o peso de pet" required>
+                                <input type="number" class="form-control" id="pesoPet" maxlength="5" onkeypress="$(this).mask('00,00', {reverse: true});" placeholder="Digite o peso de pet" th:field="*{peso}"required>
                                 <div class="invalid-feedback">
                                   Por favor, informe o peso.
                                 </div>
                               </div>
                               <div class="form-group">
                                 <label for="racaPet" class="form-label">Raça do Pet</label>
-                                <input type="text" class="form-control" id="racaPet" placeholder="Digite a raça do Pet" required>
+                                <input type="text" class="form-control" id="racaPet" placeholder="Digite a raça do Pet" th:field="*{raca}"required>
                                 <div class="invalid-feedback">
                                   Por favor, informe a raça.
                                 </div>
                               </div>
                               <div class="form-group">
                                 <label for="corPet" class="form-label">Cor do Pet</label>
-                                <input type="text" class="form-control" id="corPet" placeholder="Cor do Pet" required>
+                                <input type="text" class="form-control" id="corPet" placeholder="Cor do Pet" th:field="*{cor}" required>
                                 <div class="invalid-feedback">
                                   Por favor, informe o cor.
                                 </div>
@@ -211,14 +211,15 @@
                               </div>
                               <div class="form-group">
                                 <label for="obspet" class="form-label">Observações</label>
-                                <input type="text" class="form-control" id="obspet" placeholder="" required>
+                                <input type="text" class="form-control" id="obspet" placeholder="" th:field="*{obs}"required>
                               </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
+                        
+                     </div>
+                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                         <button type="button" class="btn btn-primary" onclick="validar()">Enviar</button>
                       </div>
+                    </form>
             </div>
         </div>
     </div>
@@ -230,7 +231,7 @@
   </main>
   </div>
 
-  <script src="../bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
 
   <script src="../js/form-validation.js"></script>
 
