--- a/demo/src/main/resources/templates/html/cadastrodopet.html
+++ b/demo/src/main/resources/templates/html/cadastrodopet.html
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="modal-body">
-                        <form method="post" th:action="InsertPet" th:object="${Pet}" class="needs-validation" novalidate>
+                        <form method="post" th:action="InsertPet" th:object="${pet}"  class="needs-validation" novalidate>
                             <div class="form-group">
                               <h4 class="mb-3">Informações do Pet</h4>
                               <label for="nomePet" class="form-label">Nome do Pet</label>
@@ -198,7 +198,7 @@
                                   Por favor, informe o cor.
                                 </div>
                               </div>
-                              <div class="form-group">
+                              <!--<div class="form-group">
                                 <h4 class="mb-1">Genero</h4>
                                 <div class="form-check">
                                   <input id="femea" name="genero" type="radio" class="form-check-input" checked required>
@@ -208,16 +208,15 @@
                                   <input id="macho" name="genero" type="radio" class="form-check-input" required>
                                   <label class="form-check-label" for="macho">Macho</label>
                                 </div>
-                              </div>
+                              </div>-->
                               <div class="form-group">
                                 <label for="obspet" class="form-label">Observações</label>
                                 <input type="text" class="form-control" id="obspet" placeholder="" th:field="*{obs}"required>
                               </div>
-                        
-                     </div>
-                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                        <button type="button" class="btn btn-primary" onclick="validar()">Enviar</button>
+                            </div>
+                             <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                             <button type="submit" class="btn btn-primary" onclick="validar()">Enviar</button>
                       </div>
                     </form>
             </div>
