--- a/demo/src/main/resources/templates/html/alterarpet.html
+++ b/demo/src/main/resources/templates/html/alterarpet.html
@@ -72,90 +72,15 @@
 </head>
 <body class="bg-light"></body>
 <header class="p-3 mb-3 border-bottom">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-          <use xlink:href="#bootstrap" />
-        </svg>
-      </a>
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="../html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
-      </ul>
-
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Login
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Parceiro</a></li>
-          <li><a class="dropdown-item" href="#">Dono Pet</a></li>
-        </ul>
-      </div>
-
-  </div>
+  
 </header>
 
 <div class="container">
-  <div class="row  g-3">
-    <div class="col-sm">
-      <h2>Cadastro do Pet</h2>
-    </div> 
-    <div class="col-auto">
-    <button class="btn btn-primary btn" id="btn-cadastro" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="submit">
-      Cadastrar
-  </button>
-    </div>
-    <div class="row g-3">
-      <div class="col-sm">
-      <input type="search" class="form-control" id="pesquisaPet" placeholder="Pesquisa" required>
-    </div>
-    <div class="col-auto">
-      <button class="btn btn-primary">Pesquisar</button>
-    </div>
-    </div>
-</div> <br>
-
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Nome do Pet</th>
-      <th scope="col">Idade</th>
-      <th scope="col">Ações</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr scope="row" th:each="pet : ${petList} ">
-      <td th:text="${pet.nomePet}"></td>
-      <td th:text="${pet.idade}"></td>
-
-      <td>        
-        <a class="btn btn-primary" th:href="@{alterarpet/{codigo}(codigo=${pet.codigo})}">
-        <i class="fas fa-edit" ></i>Editar </a>
-
-        <a class="btn btn-danger" th:href="@{excluir/{codigo}(codigo=${pet.codigo})}">
-        <i class="fas fa-times"></i>Excluir </a>
-       
-      </td>
-    </tr>
-  </tbody>
-</table>
-
     <main>
-    <div id = "JanelaModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"     aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-
-                <div class="modal-header">
-                    <h3 class="modal-title">Cadastro do Pet</h3>
-                    <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
-                </div>
-
+        <div id = "OutraJanela" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"     aria-labelledby="myLargeModalLabel" aria-hidden="true"></div>
                 <div class="modal-body">
-                        <form method="post" th:action="InsertPet" th:object="${pet}"  class="needs-validation" novalidate>
+                        <form method="post" th:action="alterarpet" th:object="${pet}"  class="needs-validation" novalidate>
+                            <input type="hidden" th:field="*{codigo}">
                             <div class="form-group">
                               <h4 class="mb-3">Informações do Pet</h4>
                               <label for="nomePet" class="form-label">Nome do Pet</label>
@@ -218,16 +143,15 @@
                       </div>
                     </form>
             </div>
+        
         </div>
-      </div>
+    </div>
 
       <div class="py-5 text-center">
       
       </div>
     
   </main>
-
-
   </div>
 
   <script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
