--- a/demo/src/main/resources/templates/html/alterarpet.html
+++ b/demo/src/main/resources/templates/html/alterarpet.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <title>Cadastro do Pet</title>
+  <title>Editar Pet</title>
 
   <link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -73,18 +73,38 @@
 
 <body class="bg-light"></body>
 <header class="p-3 mb-3 border-bottom">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap" />
+        </svg>
+      </a>
 
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="../html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
+      </ul>
+
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Login
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Parceiro</a></li>
+          <li><a class="dropdown-item" href="#">Dono Pet</a></li>
+        </ul>
+      </div>
+    </div>
 </header>
-
-<div class="container">
-  <main>
-    <div id="OutraJanela" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
-      aria-labelledby="myLargeModalLabel" aria-hidden="true" th:id="OutraJanela+#{pet.codigo}"></div>
-    <div class="modal-body">
+<main>
+  <div class="container">
+    <div class="row col-md-5 offset-md-4">
       <form method="post" th:action="alterarpet" th:object="${pet}" class="needs-validation" novalidate>
         <input type="hidden" th:field="*{codigo}">
+        <h3 class="text-center">Editar Pet</h3>
         <div class="form-group">
-          <h4 class="mb-3">Informações do Pet</h4>
           <label for="nomePet" class="form-label">Nome do Pet</label>
           <input type="text" class="form-control" id="nomePet" placeholder="Digite o nome do pet" th:field="*{nomePet}"
             required>
@@ -96,14 +116,10 @@
           <label for="idadePet" class="form-label">Idade do Pet</label>
           <input type="number" class="form-control" id="idadePet" placeholder="Digite a idade do pet"
             th:field="*{idade}" required>
-          <div id="erro-ida   de" class="invalid-feedback">
-            Por favor, informe a idade.<i class="fas fa-id-badge    "></i>.
+          <div id="erro-idade" class="invalid-feedback">
+            Por favor, informe a idade
           </div>
         </div>
-        <!--<div class="form-group">
-                                <label for="dtNascPet" class="form-label">Data de Nascimento </label>
-                                <input type="date" class="form-control" id="dtNascPet" placeholder="">
-                              </div>-->
         <div class="form-group">
           <label for="pesoPet" class="form-label">Peso do Pet</label>
           <input type="number" class="form-control" id="pesoPet" maxlength="5"
@@ -112,56 +128,37 @@
           <div class="invalid-feedback">
             Por favor, informe o peso.
           </div>
-        </div>
-        <div class="form-group">
-          <label for="racaPet" class="form-label">Raça do Pet</label>
-          <input type="text" class="form-control" id="racaPet" placeholder="Digite a raça do Pet" th:field="*{raca}"
-            required>
-          <div class="invalid-feedback">
-            Por favor, informe a raça.
+          <div class="form-group">
+            <label for="racaPet" class="form-label">Raça do Pet</label>
+            <input type="text" class="form-control" id="racaPet" placeholder="Digite a raça do Pet" th:field="*{raca}"
+              required>
+            <div class="invalid-feedback">
+              Por favor, informe a raça.
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="corPet" class="form-label">Cor do Pet</label>
-          <input type="text" class="form-control" id="corPet" placeholder="Cor do Pet" th:field="*{cor}" required>
-          <div class="invalid-feedback">
-            Por favor, informe o cor.
+          <div class="form-group">
+            <label for="corPet" class="form-label">Cor do Pet</label>
+            <input type="text" class="form-control" id="corPet" placeholder="Cor do Pet" th:field="*{cor}" required>
+            <div class="invalid-feedback">
+              Por favor, informe o cor.
+            </div>
           </div>
-        </div>
-        <!--<div class="form-group">
-                                <h4 class="mb-1">Genero</h4>
-                                <div class="form-check">
-                                  <input id="femea" name="genero" type="radio" class="form-check-input" checked required>
-                                  <label class="form-check-label" for="femea">Femêa</label>
-                                </div>
-                                <div class="form-check">
-                                  <input id="macho" name="genero" type="radio" class="form-check-input" required>
-                                  <label class="form-check-label" for="macho">Macho</label>
-                                </div>
-                              </div>-->
-        <div class="form-group">
-          <label for="obspet" class="form-label">Observações</label>
-          <input type="text" class="form-control" id="obspet" placeholder="" th:field="*{obs}" required>
-        </div>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-      <button type="submit" class="btn btn-primary" onclick="validar()">Enviar</button>
-    </div>
-    </form>
-</div>
-
-</div>
-</div>
-
-<div class="py-5 text-center">
-
-</div>
-
-</main>
-</div>
-
-<script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
+          <div class="form-group">
+            <label for="obspet" class="form-label">Observações</label>
+            <input type="text" class="form-control" id="obspet" placeholder="Observações" th:field="*{obs}">
+          </div><br>
+          <div class="text-center">
+          <button type="submit" class="btn btn-primary" onclick="validar()">Salvar</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Voltar</button></div>
+          </div>
+          </form>
+          </div>
+          </div>
+          </div>
+          </main>
+          
+          
+          <script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
 
 <script src="../js/form-validation.js"></script>
 
