--- a/demo/src/main/resources/templates/html/backup.html
+++ b/demo/src/main/resources/templates/html/backup.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <title>Cadastro do Pet</title>
+  <title>Pets</title>
 
   <link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -99,91 +99,47 @@
 
     </div>
 </header>
-  <main>
-    <div class="row">
-    <div class="d-flex justify-content-center">
-          <div class="d-flex justify-content-center">
-            <h3 class="">Cadastro do Pet</h3>
-          </div>
-          <br>
 
-         <div class="modal-body">
-            <form method="post" th:action="InsertPet" th:object="${pet}" class="needs-validation" novalidate>
-              <div class="form-group">
-                <h4 class="mb-3">Informações do Pet</h4>
-                <label for="nomePet" class="form-label">Nome do Pet</label>
-                <input type="text" class="form-control" id="nomePet" placeholder="Digite o nome do pet"
-                  th:field="*{nomePet}" required>
-                <div class="invalid-feedback">
-                  Por favor, informe o nome.
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="idadePet" class="form-label">Idade do Pet</label>
-                <input type="number" class="form-control" id="idadePet" placeholder="Digite a idade do pet"
-                  th:field="*{idade}" required>
-                <div id="erro-ida   de" class="invalid-feedback">
-                  Por favor, informe a idade.<i class="fas fa-id-badge    "></i>.
-                </div>
-              </div>
-              <!--<div class="form-group">
-                                <label for="dtNascPet" class="form-label">Data de Nascimento </label>
-                                <input type="date" class="form-control" id="dtNascPet" placeholder="">
-                              </div>-->
-              <div class="form-group">
-                <label for="pesoPet" class="form-label">Peso do Pet</label>
-                <input type="number" class="form-control" id="pesoPet" maxlength="5"
-                  onkeypress="$(this).mask('00,00', {reverse: true});" placeholder="Digite o peso de pet"
-                  th:field="*{peso}" required>
-                <div class="invalid-feedback">
-                  Por favor, informe o peso.
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="racaPet" class="form-label">Raça do Pet</label>
-                <input type="text" class="form-control" id="racaPet" placeholder="Digite a raça do Pet"
-                  th:field="*{raca}" required>
-                <div class="invalid-feedback">
-                  Por favor, informe a raça.
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="corPet" class="form-label">Cor do Pet</label>
-                <input type="text" class="form-control" id="corPet" placeholder="Cor do Pet" th:field="*{cor}" required>
-                <div class="invalid-feedback">
-                  Por favor, informe o cor.
-                </div>
-              </div>
-              <!--<div class="form-group">
-                                <h4 class="mb-1">Genero</h4>
-                                <div class="form-check">
-                                  <input id="femea" name="genero" type="radio" class="form-check-input" checked required>
-                                  <label class="form-check-label" for="femea">Femêa</label>
-                                </div>
-                                <div class="form-check">
-                                  <input id="macho" name="genero" type="radio" class="form-check-input" required>
-                                  <label class="form-check-label" for="macho">Macho</label>
-                                </div>
-                              </div>-->
-              <div class="form-group">
-                <label for="obspet" class="form-label">Observações</label>
-                <input type="text" class="form-control" id="obspet" placeholder="" th:field="*{obs}" required>
-              </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-            <button type="submit" class="btn btn-primary" onclick="validar()">Enviar</button>
-          </div>
-          </form>
-        </div>
+<div class="container">
+  <div class="row g-3">
+    <div class="col-sm">
+      <h2>Pet</h2>
+    </div>
+    <div class="col-auto">
+      <a class="btn btn-primary" th:href="@{inserirPet}">
+        <i class="fas fa-edit"></i>Cadatrar </a>
+    </div>
+    <div class="row g-1">
+      <div class="col-sm">
+        <input type="search" class="form-control" id="pesquisaPet" placeholder="Pesquisa">
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-primary">Pesquisar</button>
       </div>
     </div>
-
-    <div class="py-5 text-center">
-
-    </div>
-  </div>
-  </main>
+  </div> <br>
+  <div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Nome do Pet</th>
+        <th scope="col">Idade</th>
+        <th scope="col">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr scope="row g-3" th:each="pet : ${petList} ">
+        <td th:text="${pet.nomePet}"></td>
+        <td th:text="${pet.idade}"></td>
+        <td>
+          <a class="btn btn-primary" th:href="@{alterarpet/{codigo}(codigo=${pet.codigo})}">
+            <i class="fas fa-edit"></i>Editar </a>
+          <a class="btn btn-danger" th:href="@{excluir/{codigo}(codigo=${pet.codigo})}">
+            <i class="fas fa-times"></i>Excluir </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 </div>
 
