--- a/demo/src/main/resources/templates/html/alterardonopet.html
+++ b/demo/src/main/resources/templates/html/alterardonopet.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta http-equiv="Content-Type" content="text/html">
-  <title>Cadastro Parceiro</title>
+  <title>Cadastro do Dono Pet</title>
 
-  <link href="/src/main/resources/static/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -104,8 +104,8 @@
   <main>
     <div class="container">
       <div class="row col-md-5 offset-md-4">
-        <form method="post" th:action="InsertParceiro" th:object="${parceiro}" class="needs-validation" novalidate>
-          <h3 class="text-center">Cadastro Parceiro</h3>
+        <form method="post" th:action="alterardonopet" th:object="${donopet}" class="needs-validation" novalidate>
+          <h3 class="text-center">Editar Dono do Pet</h3>
           <div class="form-group">
             <label for="nomeDonoPet" class="form-label">Nome</label>
             <input type="text" class="form-control" id="nomeDonoPet" placeholder="Digite seu nome" th:field="*{nome}"
@@ -115,97 +115,41 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="cpf" class="form-label">CNPJ</label>
-            <input type="text" class="form-control" id="cpfDono" maxlength="14" onkeyup="$(this).mask('000.000.000-00')"
-              placeholder="Digite seu CPF" th:field="*{cpf}" required>
+            <label for="cpf" class="form-label">CPF</label>
+            <input type="text" class="form-control" id="cpfDono" maxlength="14" onkeyup="$(this).mask('000.000.000-00')" placeholder="Digite seu CPF" th:field="*{cpf}"required>
             <div id="erro-cpf" class="invalid-feedback">
               Por favor, informe o CPF.
             </div>
           </div>
           <div class="form-group">
             <label for="telefoneDono" class="form-label">Telefone</label>
-            <input type="text" class="form-control" id="telefoneDono" onkeypress="$(this).mask('(00) 0000-00009')"
-              placeholder="Digite seu telefone" th:field="*{telefone}">
+            <input type="text" class="form-control" id="telefoneDono" onkeypress="$(this).mask('(00) 0000-00009')" placeholder="Digite seu telefone" th:field="*{telefone}">
             <div class="invalid-feedback">
               Por favor, informe o telefone.
             </div>
           </div>
+          <!--<div class="form-group">
+            <h4 class="mb-1">Genero</h4>
+            <select>
+              <option th:each="genero : ${T(br.com.pethoteis.demo.Enum.Genero).value()}" th:value="${genero}" th:text="${genero}"></option>
+            </select>
+          </div>-->
           <div class="form-group">
             <label for="emailDonoDoPet" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="emailDonoDoPet" placeholder="Digite seu e-mail"
-              th:field="*{email}" required>
+            <input type="email" class="form-control" id="emailDonoDoPet" placeholder="Digite seu e-mail" th:field="*{email}" required>
             <div class="invalid-feedback">
               Por favor, informe o e-mail.
             </div>
             <div class="form-group">
-              <h4 class="mb-1">Serviços</h4>
-              <div class="my-2 form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico1" value="Hospedagem">
-                <label class="form-check-label" for="servico1">Hospedagem</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico2" value="Creche">
-                <label class="form-check-label" for="servico2">Creche</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico3" value="Pet sitter">
-                <label class="form-check-label" for="servico3">Pet sitter</label>
-              </div>
-            </div>
-            <!--  <div class="form-group">
-              <h4 class="mb-1">Horario de Funcionamento</h4>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="segunda" value="Segunda">
-                <label class="form-check-label" for="segunda">Segunda</label>
-                <label for="horario"></label>
-                <input type="time" id="horario" name="horario" required>
-                <label for="horario">ás</label>
-                <input type="time" id="horario" name="horario" required>                
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="terca" value="terca">
-                <label class="form-check-label" for="terca">Terça</label>
-                <label for="horario"></label>
-                <input type="time" id="horario" name="horario" required>
-                <label for="horario">ás</label>
-                <input type="time" id="horario" name="horario" required>                
-              </div>
-            </div>-->
-            <div class="form-group">
-              <label for="nomeProprietario" class="form-label">Nome do Proprietario</label>
-              <input type="text" class="form-control" id="nomeProprietario" placeholder="Digite o nome do proprietario"
-                required>
-            </div>
-            <div class="form-group">
-              <label for="cpfProprietario" class="form-label">CPF do Proprietario</label>
-              <input type="text" class="form-control" id="cpfProprietario" maxlength="14"
-                onkeyup="$(this).mask('000.000.000-00')" placeholder="Digite CPF do proprietario" required>
-            </div>
-            <div class="form-group">
-              <h4 class="mb-1">Situação</h4>
-              <div class="my-2">
-                <div class="form-check">
-                  <input id="ativo" name="situacao" type="radio" class="form-check-input" checked required>
-                  <label class="form-check-label" for="ativo">Ativo</label>
-                </div>
-                <div class="form-check">
-                  <input id="inativo" name="situacao" type="radio" class="form-check-input" required>
-                  <label class="form-check-label" for="inativo">Inativo</label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="senhaParceiro" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senhaParceiro" placeholder="Digite a senha"
-                th:field="*{senha}" required>
-              <div class="invalid-feedback">
+              <label for="senhaDonoDoPet" class="form-label">Confirmação da senha</label>
+              <input type="password" class="form-control" id="senhaDonoDoPet" placeholder="Digite a senha" th:field="*{senha}" required>
+              <div  class="invalid-feedback">
                 Por favor, informe a senha.
               </div>
             </div>
             <div class="form-group">
-              <label for="confSenhaParceiro" class="form-label">Confirmação da senha</label>
-              <input type="password" class="form-control" id="confSenhaParceiro" placeholder="Digite novamente a senha"
-                th:field="*{confSenha}" required>
+              <label for="confSenhaDonoDoPet" class="form-label">Confirmação da senha</label>
+              <input type="password" class="form-control" id="confSenhaDonoDoPet" placeholder="Digite novamente a senha" th:field="*{confSenha}"  required>
               <div class="invalid-feedback">
                 Por favor, informe a senha novamente.
               </div>
@@ -213,7 +157,7 @@
             <div class="text-center">
               <button type="submit" class="btn btn-primary" onclick="validar()">Salvar</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Voltar</button>
-            </div>
+            </div>               
         </form>
       </div>
     </div>
