--- a/demo/src/main/resources/templates/html/cadastrodopet.html
+++ b/demo/src/main/resources/templates/html/cadastrodopet.html
@@ -82,8 +82,8 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="../html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
+        <li><a href="/src/main/resources/templates/html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="/src/main/resources/templates/html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
       </ul>
 
