--- a/demo/src/main/resources/templates/html/listarpet.html
+++ b/demo/src/main/resources/templates/html/listarpet.html
@@ -107,8 +107,8 @@
       <h2>Pet</h2> 
     </div>
     <div class="col-auto">
-      <a class="btn btn-primary" th:href="@{inserirPet}">
-        <i class="fas fa-edit"></i>Cadatrar </a>
+      <a class="btn btn-primary" th:href="@{lista-pet/inserirPet}">
+        <i class="fas fa-edit"></i>Cadastrar </a>
     </div>
     <div class="row g-1">
       <div class="col-sm">
@@ -133,7 +133,7 @@
           <td class="col-6" th:text="${pet.nomePet}"></td>
           <td class="col-4" th:text="${pet.idade}"></td>
           <td class="col">
-            <a class="btn btn-primary" th:href="@{alterarpet/{codigo}(codigo=${pet.codigo})}">Editar</a>
+            <a class="btn btn-primary" th:href="@{/alterarpet/{codigo}(codigo=${pet.codigo})}">Editar</a>
             <a class="btn btn-danger" th:href="@{excluir/{codigo}(codigo=${pet.codigo})}">Excluir</a>
           </td>
         </tr>
